Better multi project build support (#81)
Add Dependency::project to create dependencies between modules.
Adds GradlePlugin::apply
Adds Packaging to allow the definition of packaging in pom.xml